syntax = "proto3";

package users.api.proto;

option go_package = "api/pb";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(Pagination) returns (ListUsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
message GetUserRequest {
    uint32 id = 1;
}
message GetUserResponse {
    uint32 id = 1;
    string name = 2;
    string email = 3;
}
message Pagination {
    uint32 limit = 1;
    uint32 offset = 2;
    uint32 total = 3;
}
message ListUsersResponse {
    repeated User users = 1;
    Pagination pagination = 2;
}
message User {
    uint32 id = 1;
    string name = 2;
    string email = 3;
}
message UpdateUserRequest {
    uint32 id = 1;
    string name = 2;
    string email = 3;
}
message UpdateUserResponse {
    uint32 id = 1;
    string name = 2;
    string email = 3;
}
message DeleteUserRequest {
    uint32 id = 1;
}
message DeleteUserResponse {
    bool success = 1;
}
message CreateUserRequest {
    string name = 1;
    string email = 2;
}
message CreateUserResponse {
    uint32 id = 1;
    string name = 2;
    string email = 3;
}